--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -24,6 +24,7 @@ $gutter: $grid-gutter-width
 @import 'node_modules/bootstrap/scss/_modal.scss' // Optional Bootstrap 
 @import 'node_modules/bootstrap/scss/_buttons.scss' // Optional Bootstrap 
 @import 'node_modules/bootstrap/scss/_button-group.scss' // Optional Bootstrap 
+@import 'node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss' // Font Awesome
 
 // FONTS LOAD SECTION
 
