--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -13,6 +13,14 @@ a
 a:hover
   text-decoration: none
 
+a.card-link 
+	color: #343a40
+	display: inline-block;
+	vertical-align: middle;
+
+a.card-link:hover 
+	color: #000
+
 // .card
 // 	height: 600px
 
