Update background color

--- a/app/sass/_config.sass
+++ b/app/sass/_config.sass
@@ -4,7 +4,7 @@ $primary: #1263a2
 $accent: orange // Accent Color
 $fontsize: 14px // Body Font Size
 $textcolor: #fff // Text Color
-$bgcolor: #1d222a // Background Color
+$bgcolor: #151719 // Background Color
 $system: -apple-system, BlinkMacSystemFont, Arial, sans-serif // System Font Family
 $roboto: Roboto, sans-serif // Roboto Font Family
 $poppins: Poppins, sans-serif // Poppins Font Family
