--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,6 +4,9 @@
 	position: relative
 	z-index: 100
 
+h1
+	font-size: 2.5em
+
 .btn-group
 	width: 100%
 
@@ -62,7 +65,7 @@ a.card-link:hover
 
 .stars
 	z-index: 0
-	background: #1d222a url('../images/dest/stars.png') repeat top center
+	background: #151719 url('../images/dest/stars.png') repeat top center
 
 
 .twinkling
